chore(hyprland): remove sudo dependencies in favor of run0
Switching the Hyprland NVIDIA recipe to drop sudo aligns with adopting run0 as the primary privilege escalation path, reducing redundant tooling and potential attack surface in the image.

--- a/recipes/recipe-hyprland-nvidia.yml
+++ b/recipes/recipe-hyprland-nvidia.yml
@@ -6,6 +6,7 @@ base-image: ghcr.io/secureblue/sericea-nvidia-open-hardened
 image-version: 43
 
 modules:
+    - from-file: hyprland/remove-sudo.yml
     - from-file: hyprland/packages.yml
     - from-file: hyprland/packages-ags.yml
     - from-file: common/packages-extra.yml
